# InsiderTradingTracker

./: .gitignore  LICENSE  README.md  aggregate_df.py  data_parsing.ipynb  flattener.py  helpers.py  insider_trades.json  pyproject.toml
src/insider_trading/: main.py
src/insider_trading/types/: sec_filings.py
src/types/: sec_filings.py
tests/models/: test_json_load.py
