[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insider-trading-tracker"
version = "0.1.0"
description = "Tools for parsing and analyzing SEC insider trading filings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8",
    "pandas>=2.2",
    "numpy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
norecursedirs = [".venv", "build", "dist", "*.egg-info"]
